crates/shwasi-engine/tests/snapshots/integration__bad_i32.snap
---
source: crates/shwasi-engine/tests/tests.rs
expression: pretty_fmt(&module)
---
globals
---
0: global i32 i32.const -1208156932
1: global i32 i32.const 0


