crates/shwasi-engine/tests/snapshots/integration__block_function.snap
---
source: crates/shwasi-engine/tests/tests.rs
expression: pretty_fmt(&module)
---
types
---
0: () -> (i32)

functions
---
0: func (0)
1: func (0)

codes
---
0: locals: []
block 0 (functype)
  f64.const 0.00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000104
  unreachable
end
end

1: locals: []
unreachable
end



