crates/shwasi-engine/tests/snapshots/integration__can_parse_instructions_with_placeholders.snap
---
source: crates/shwasi-engine/tests/tests.rs
expression: pretty_fmt(&module)
---
types
---
0: () -> ()

functions
---
0: func (0)

codes
---
0: locals: []
memory.size
memory.grow
memory.init 0
memory.copy
memory.fill



