crates/shwasi-engine/tests/snapshots/integration__data_count.snap
---
source: crates/shwasi-engine/tests/tests.rs
expression: pretty_fmt(&module)
---
datas
---
0: data at i32.const 0: bytes: []

data count: 1


